# google-merchant-client

./: Cargo.toml  Readme.md
src/: lib.rs  structs.rs
tests/: client_tests.rs  feed.xml
